<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvWatt"
        android:layout_width="136dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:text="@string/watt_yang_digunakan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPenggunaan_Jam"
        android:layout_width="154dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:text="@string/waktu_penggunaan_per_hari"
        app:layout_constraintStart_toStartOf="@+id/tvWatt"
        app:layout_constraintTop_toBottomOf="@+id/tvWatt" />

    <TextView
        android:id="@+id/tvBiayaListrikTahun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/biaya_listrik_tahun"
        app:layout_constraintStart_toStartOf="@+id/tvBiayaListrikBulan"
        app:layout_constraintTop_toBottomOf="@+id/tvBiayaListrikBulan" />

    <TextView
        android:id="@+id/tvBiayaListrikBulan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/biaya_listrik_bulan"
        app:layout_constraintStart_toStartOf="@+id/tvBiayaListrikHari"
        app:layout_constraintTop_toBottomOf="@+id/tvBiayaListrikHari" />

    <TextView
        android:id="@+id/tvBiayaListrikHari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/biaya_listrik_hari"
        app:layout_constraintStart_toStartOf="@+id/tvDayaListrik"
        app:layout_constraintTop_toBottomOf="@+id/tvDayaListrik" />

    <TextView
        android:id="@+id/tvDayaListrik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/daya_listrik"
        app:layout_constraintStart_toStartOf="@+id/tvGolongan"
        app:layout_constraintTop_toBottomOf="@+id/tvGolongan" />

    <EditText
        android:id="@+id/etWatt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:hint="@string/watt"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/tvWatt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvWatt" />

    <EditText
        android:id="@+id/etJam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/jam"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/tvPenggunaan_Jam"
        app:layout_constraintEnd_toEndOf="@+id/etWatt"
        app:layout_constraintTop_toTopOf="@+id/tvPenggunaan_Jam" />

    <Spinner
        android:id="@+id/spinnerGolongan"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvGolongan"
        app:layout_constraintEnd_toEndOf="@+id/etJam"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvGolongan"
        app:layout_constraintTop_toTopOf="@+id/tvGolongan"
        app:layout_constraintVertical_bias="0.586"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvGolongan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/golongan"
        app:layout_constraintStart_toStartOf="@+id/tvPenggunaan_Jam"
        app:layout_constraintTop_toBottomOf="@+id/tvPenggunaan_Jam" />

    <Spinner
        android:id="@+id/spinnerDayaListrik"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDayaListrik"
        app:layout_constraintEnd_toEndOf="@+id/spinnerGolongan"
        app:layout_constraintTop_toTopOf="@+id/tvDayaListrik"
        app:layout_constraintVertical_bias="0.517"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvBiayaListrikHariAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:text="@string/biaya_listrik_hari_amount"
        app:layout_constraintBottom_toBottomOf="@+id/tvBiayaListrikHari"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvBiayaListrikHari" />

    <TextView
        android:id="@+id/tvBiayaListrikBulanAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biaya_listrik_bulan_amount"
        app:layout_constraintBottom_toBottomOf="@+id/tvBiayaListrikBulan"
        app:layout_constraintStart_toStartOf="@+id/tvBiayaListrikHariAmount"
        app:layout_constraintTop_toTopOf="@+id/tvBiayaListrikBulan" />

    <TextView
        android:id="@+id/tvBiayaListrikTahunAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biaya_listrik_tahun_amount"
        app:layout_constraintBottom_toBottomOf="@+id/tvBiayaListrikTahun"
        app:layout_constraintStart_toStartOf="@+id/tvBiayaListrikBulanAmount"
        app:layout_constraintTop_toTopOf="@+id/tvBiayaListrikTahun"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>